commit en rama estilos_css

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: coral;
 }
+
+* {
+    color: white;
+}
+
+p {
+    line-height: 2.5em;
+    width: 800px;
+    text-align: justify;
+}
